--- a/page2.html
+++ b/page2.html
@@ -4,10 +4,11 @@
 	#head{
 			font-size:98px;
 		    background-image: linear-gradient( 109.6deg,  rgba(96,221,142,1) 11.2%, rgba(24,138,141,1) 91.1% );
-			margin-bottom:5%;
+			margin-bottom:1%;
+			margin-top:0%;
 			text-decoration:none;
 			font-family:verdana;
-			transition:width 2s;		
+			color:#4B5320;
 		}
 	
 	#content{
@@ -16,6 +17,8 @@
 			margin-right:5%;
 			margin-left:0%;
 			font-family:sans-serif;
+			height:400px;
+			margin-bottom:-39.8%;
 			}
 	#division{
 				background-image: linear-gradient( 109.6deg,  rgba(96,221,142,1) 11.2%, rgba(24,138,141,1) 91.1% );
@@ -36,7 +39,7 @@
 		}
 	#list{
 			font-size:18px;
-			margin-top:-2%;
+			margin-top:100%;
 			liststyletype:none;
 			background-color:#008B8B;
 			width:1510px;
@@ -44,10 +47,9 @@
 			font-family:Calibri;
 			height:18%;
 			float:left;
-			margin-bottom:-3%;
+			margin-bottom:-30%;
 			}
 	li a:hover {
-  background-color: #555;
   color: white;
   }
   li a{
@@ -59,20 +61,20 @@
   color:white;
 }
 #img2{
-		margin-top:60%;
 		height:1000px;
-		width:1000px;
+		width:1500px;
 		margin-bottom:-3%;
-		opacity:200%;
 		
 		}
 div.pic2{
 			position:absolute;
-			padding-top:50%;
-			height:70%;
-			width:30%;
-			align:center;
-			opacity:0.3;
+			padding-top:55%;
+			margin-right:-200%;
+			margin-top:30%;
+			float:left;
+			height:50px;
+			width:100%;
+			
 			padding-left:30%;
 		}
 </style>
@@ -80,9 +82,10 @@ div.pic2{
 <body>
 <div class="pic1">
 <img src="4.gif" alt="forest"/>
+<h1 id="head">About Life on Land</h1>
 </div>
 	<div id="division">
-		<h1 id="head">About Life on Land</h1>
+		
 		<p id="content">Forests are crucial to global sustainable development, affecting both the natural environment and economic prosperity. They are home to 80% of the world terrestrial specific, provide clean water, prevent soil erosion and flood, and can provide one third of carbon mitigation efforts needs to hold temperature rise below 2<sup>o</sup>C. Some 1.6 billion people depend on forests for sustenance, duel and medicinal plants, while 10 million people are employed in the forestry sector worldwide. 
 		 Environmental conservation has an impact on every level of life on the planet, from human beings to animals and plants.<br> <br> 
 
@@ -99,6 +102,10 @@ Today, deforestation is happening at a rapid rate. Around ten million hectares o
 Adding to the conservation of forests and wildlife can also contribute to the economic development of communities around the world, and improve the quality of life for the global community.<br><br>  
 
 GVI incorporates wildlife conservation into targeted volunteer programs. By getting involved in a wildlife conservation volunteer program, you’ll be adding to UN SDG 15: Life on Land – as well as the 16 other UN SDGs – and be part of global conservation efforts.<br> <br> 
+
+<div class="pic2">
+		<img src="forest.jpg" alt="zebra"/>
+	</div>
 		 </p>
 	<div id="list">
 		<ul style="list-style-type:none">
@@ -108,9 +115,6 @@ GVI incorporates wildlife conservation into targeted volunteer programs. By gett
                                 <li><i class="fas fa-check"></i> <a href="#">Solutions</a></li><br>
                             </ul>
 	</div>
-	</div>
-	<div class="pic2">
-		<img src="1.gif" alt="zebra"/>
 	</div>
 </body>
 </html>
