--- a/Solutions.html
+++ b/Solutions.html
@@ -4,6 +4,7 @@
         <style>
             h1{
                 text-align:center;
+                font-size:78px;
             }
         </style>
     </head>
