--- a/Solutions.html
+++ b/Solutions.html
@@ -5,6 +5,8 @@
             h1{
                 text-align:center;
                 font-size:78px;
+                mix-blend-mode:screen;
+                background-color:chartreuse;
             }
         </style>
     </head>
