--- a/Solutions.html
+++ b/Solutions.html
@@ -7,6 +7,7 @@
                 font-size:78px;
                 mix-blend-mode:screen;
                 background-color:chartreuse;
+                color:white;
             }
         </style>
     </head>
