--- a/Solutions.html
+++ b/Solutions.html
@@ -9,6 +9,11 @@
                 background-color:chartreuse;
                 color:white;
             }
+            h1:hover{
+                opacity:0.6;
+                background-color:darkolivegreen;
+                color:cadetblue;
+            }
         </style>
     </head>
     <body>
