--- a/Solutions.html
+++ b/Solutions.html
@@ -13,6 +13,7 @@
                 opacity:0.6;
                 background-color:darkolivegreen;
                 color:cadetblue;
+                cursor:pointer;
             }
         </style>
     </head>
