--- a/Image.html
+++ b/Image.html
@@ -19,8 +19,9 @@
 				}
 	div.image img:hover{
 						opacity:0.7
-
+						cursor:pointer;
 						}
+						
 	#text{
 		 background-color:gray;
   font-size: 10vw; 
@@ -62,9 +63,11 @@
 	#content p{
 				font-size:22px;
 				margin-top:1%;
-				margin-left:5%;
-				margin-right:5%;
+				margin-left:10%;
+				margin-right:10%;
 				font-family:cursive;
+				text-align:justify;
+				text-justify:inter-word;
 			}
 	
 	body{
