--- a/Image.html
+++ b/Image.html
@@ -60,7 +60,7 @@
 				color:navy;
 				margin-left:20%;
 				}
-	#content p{
+	#content #p1{
 				font-size:22px;
 				margin-top:1%;
 				margin-left:10%;
@@ -69,7 +69,15 @@
 				text-align:justify;
 				text-justify:inter-word;
 			}
-	
+			#content #p2{
+				font-size:22px;
+				margin-top:1%;
+				margin-left:10%;
+				margin-right:10%;
+				font-family:cursive;
+				text-align:justify;
+				text-justify:inter-word;
+			}
 	body{
 			background-color:forestgreen;
 		}
@@ -106,7 +114,8 @@
 <body>
 <div id="content">
 	<h2>Definition</h2>	
-	<p>Protect, restore and promote sustainable use of terrestrial ecosystems, sustainably manage forests, combat desertification, and halt and reverse land degradation and halt biodiversity loss.<br>Human life depends on the earth as much as the ocean for our sustenance and livelihoods. Plant life provides 80 percent of the human diet, and we rely on agriculture as an important economic resources. Forests cover 30 percent of the Earth’s surface, provide vital habitats for millions of species, and important sources for clean air and water, as well as being crucial for combating climate change.</p>
+	<p id="p1">Protect, restore and promote sustainable use of terrestrial ecosystems, sustainably manage forests, combat desertification, and halt and reverse land degradation and halt biodiversity loss.<br>Human life depends on the earth as much as the ocean for our sustenance and livelihoods. Plant life provides 80 percent of the human diet, and we rely on agriculture as an important economic resources. Forests cover 30 percent of the Earth’s surface, provide vital habitats for millions of species, and important sources for clean air and water, as well as being crucial for combating climate change.</p>
+	<p id="p2">The SDGs aim to conserve and restore the use of terrestrial ecosystems such as forests, wetlands, drylands and mountains by 2020. Halting deforestation is also vital to mitigating the impact of climate change. Urgent action must be taken to reduce the loss of natural habitats and biodiversity which are part of our common heritage.</p>
 </div>
 <div class="image">
 		<img src="cheetah.gif" alt="15"/>
