--- a/Solutions.html
+++ b/Solutions.html
@@ -8,6 +8,7 @@
                 mix-blend-mode:screen;
                 background-color:chartreuse;
                 color:white;
+                font-family:sans-serif;
             }
             h1:hover{
                 opacity:0.6;
