--- a/Solutions.html
+++ b/Solutions.html
@@ -16,6 +16,9 @@
                 color:cadetblue;
                 cursor:pointer;
             }
+            body{
+                background-image:radial-gradient(green, orange);
+            }
         </style>
     </head>
     <body>
