--- a/Solutions.html
+++ b/Solutions.html
@@ -18,6 +18,7 @@
             }
             body{
                 background-image:radial-gradient(green, orange);
+                background-repeat:no-repeat;
             }
         </style>
     </head>
