--- a/Solutions.html
+++ b/Solutions.html
@@ -9,6 +9,7 @@
                 background-color:chartreuse;
                 color:white;
                 font-family:sans-serif;
+                clear:both;
             }
             h1:hover{
                 opacity:0.6;
