--- a/Image.html
+++ b/Image.html
@@ -65,7 +65,7 @@
 				margin-top:1%;
 				margin-left:10%;
 				margin-right:10%;
-				font-family:cursive;
+				font-family:serif;
 				text-align:justify;
 				text-justify:inter-word;
 			}
