--- a/Image.html
+++ b/Image.html
@@ -124,9 +124,10 @@
 </div>
 <div id="list">
 		<ul style="list-style-type:none">
-                                <li class="fas fa-check"><a href="file:///D:/Image.html#" target="blank">Home</a></li><br>
-                                <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/Nilupul.html" target="blank">About us</a></li><br>
-                                <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html" target="blank">Targets</a></li><br>
+                                <li class="fas fa-check"><a href="description.html" target="blank">Home</a></li><br>
+                                <li class="fas fa-check"><a href="Image.html" target="blank">Description</a></li><br>
+                                <li class="fas fa-check"><a href="targets.html" target="blank">Targets</a></li><br>
+								<li class="fas fa-check"><a href="targetsdef.html" target="blank">More about Targets</a></li><br>
                                 <li class="fas fa-check"><a href="#">Solution</a></li><br>
                             </ul>
 	</div>
