--- a/targets.html
+++ b/targets.html
@@ -160,6 +160,24 @@ text-indent: 10px;
 padding-bottom: 10px;
 text-align: right;
 }
+#list{
+  font-size:18px;
+  background-color:#008B8B;
+  font-family:Calibri;
+}
+li a:hover {
+  background-color: #555;
+  color: white;
+  }
+  li a{
+		text-decoration:none;
+		color:white;
+		overflow:auto;
+	}
+	ul li:before {
+  content: '\2714\0020';
+  color:white;
+}
 
 </style>
 </head>
@@ -340,6 +358,15 @@ font-size:18px">
 <p>Every year, 13 million hectares of forest are lost, while ongoing dryland degradation has resulted in the desertification of 3.6 billion hectares, disproportionately harming impoverished communities.</p><br/>
 <p>Despite the fact that 15% of land is protected, biodiversity is nevertheless threatened. Almost 7,000 animal and plant species have been unlawfully exported. Wildlife trafficking not only destroys biodiversity, but it also causes insecurity, fuels conflict, and encourages corruption.</p><br/>
 <p>Urgent action is needed to stop the loss of natural habitats and biodiversity that are part of our shared legacy, as well as to promote global food and water security, climate change mitigation and adaptation, and peace and security.</p><br/>
+<div id="list">
+  <ul style="list-style-type:none">
+    <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="blank">More about targets</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="">Solutions</a></li>
+                          </ul>
+</div>
 </div>
 </div>
 </body>
