--- a/aboutus.html
+++ b/aboutus.html
@@ -139,7 +139,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="ritheeshkumar.jpeg" alt="ritheeshkumar" style="width:100%;">
+      <img src="ritheeshkumar.jpeg" alt="ritheeshkumar" style="width:100%; height:100%;">
       <div class="container">
         <h2>Ritheeshkumar</h2>
         <p class="title">Team member</p>
@@ -148,6 +148,7 @@ html {
       </div>
     </div>
   </div>
+ 
   
   <div class="column">
     <div class="card">
