--- a/aboutus.html
+++ b/aboutus.html
@@ -148,11 +148,11 @@ html {
       </div>
     </div>
   </div>
- 
-  
+   
+    
   <div class="column">
     <div class="card">
-      <img src="sansala.jpeg" alt="sansala" style="width:100%;">
+      <img src="sansala.jpeg" alt="sansala" style="width:100%;height:60%;">
       <div class="container">
         <h2>Sansala Senanayake</h2>
         <p class="title">Team member</p>
@@ -160,6 +160,8 @@ html {
         <p><button class="button">Contact</button></p>
       </div>
     </div>
+  </div>
+ 
   </div>
   <div class="column">
     <div class="card">
