--- a/Image.html
+++ b/Image.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head>Description
 <style>
 	div.image{
 			cursor:pointer;
@@ -75,6 +75,16 @@
 				margin-left:10%;
 				margin-right:10%;
 				font-family:cursive;
+				background-color:mediumturquoise;
+				text-align:justify;
+				text-justify:inter-word;
+			}
+			#content #p3{
+				font-size:22px;
+				margin-top:1%;
+				margin-left:10%;
+				margin-right:10%;
+				font-family:Times New Roman;
 				text-align:justify;
 				text-justify:inter-word;
 			}
@@ -116,6 +126,7 @@
 	<h2>Definition</h2>	
 	<p id="p1">Protect, restore and promote sustainable use of terrestrial ecosystems, sustainably manage forests, combat desertification, and halt and reverse land degradation and halt biodiversity loss.<br>Human life depends on the earth as much as the ocean for our sustenance and livelihoods. Plant life provides 80 percent of the human diet, and we rely on agriculture as an important economic resources. Forests cover 30 percent of the Earth’s surface, provide vital habitats for millions of species, and important sources for clean air and water, as well as being crucial for combating climate change.</p>
 	<p id="p2">The SDGs aim to conserve and restore the use of terrestrial ecosystems such as forests, wetlands, drylands and mountains by 2020. Halting deforestation is also vital to mitigating the impact of climate change. Urgent action must be taken to reduce the loss of natural habitats and biodiversity which are part of our common heritage.</p>
+	<p id="p3">While 15 percent of land is protected, biodiversity is still at risk. Nearly 7,000 species of animals and plants have been illegally traded. Wildlife trafficking not only erodes biodiversity, but creates insecurity, fuels conflict, and feeds corruption.</p>
 </div>
 <div class="image">
 		<img src="cheetah.gif" alt="15"/>
@@ -124,11 +135,11 @@
 </div>
 <div id="list">
 		<ul style="list-style-type:none">
-                                <li class="fas fa-check"><a href="description.html" target="blank">Home</a></li><br>
-                                <li class="fas fa-check"><a href="Image.html" target="blank">Description</a></li><br>
-                                <li class="fas fa-check"><a href="targets.html" target="blank">Targets</a></li><br>
-								<li class="fas fa-check"><a href="targetsdef.html" target="blank">More about Targets</a></li><br>
-                                <li class="fas fa-check"><a href="#">Solution</a></li><br>
+			<li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
+			<li><i class="fas fa-check"></i> <a href="Image.html">Description</a></li><br>
+			<li><i class="fas fa-check"></i> <a href="targets.html" target="parent">Targets</a></li><br>
+			<li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
+			<li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
                             </ul>
 	</div>
 </body>
