--- a/description.html
+++ b/description.html
@@ -272,12 +272,13 @@ function showSlides() {
                         <div class="col-lg-2 col-sm-6 footer-menus">
                           <h4>More</h4>
                             <ul>
-                                <li><i class="fas fa-check"></i> <a href="#">Home</a></li>
-                                <li><i class="fas fa-check"></i> <a href="#">About us</a></li>
-                                <li><i class="fas fa-check"></i> <a href="#">Targets</a></li>
-                                <li><i class="fas fa-check"></i> <a href="#">Terms of service</a></li>
-                                <li><i class="fas fa-check"></i> <a href="#">Privacy policy</a></li>
-                            </ul>
+                                <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li>
+                                <li><i class="fas fa-check"></i> <a href="Image.html" target="parent">Description</a></li>
+                                <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li>
+                                <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li>
+                                <li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
+                                <li><i class="fas fa-check"></i> <a href="aboutus.html">About us</a></li>
+                              </ul>
                         </div>
 
                             <div class="social-links mt-3">
