--- a/targetsdef.html
+++ b/targetsdef.html
@@ -54,6 +54,24 @@
   text-align: center;
   background-color: #339933;
 }
+#list{
+  font-size:18px;
+  background-color:#008B8B;
+  font-family:Calibri;
+}
+li a:hover {
+  background-color: #555;
+  color: white;
+  }
+  li a{
+		text-decoration:none;
+		color:white;
+		overflow:auto;
+	}
+	ul li:before {
+  content: '\2714\0020';
+  color:white;
+}
 </style>
 </head>
 <body>
@@ -166,6 +184,15 @@
     </div>
   </div>
   </div>
+</div>
+<div id="list">
+  <ul style="list-style-type:none">
+    <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="blank">More about targets</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
+                          </ul>
 </div>
 </body>
 </html>
