--- a/about.html
+++ b/about.html
@@ -39,15 +39,15 @@
 		}
 	#list{
 			font-size:18px;
-			margin-top:125%;
+			margin-top:124%;
 			liststyletype:none;
 			background-color:#008B8B;
 			width:1510px;
 			display:block;
 			font-family:Calibri;
-			height:18%;
+			height:22%;
 			float:left;
-			margin-bottom:-30%;
+			margin-bottom:0%;
 			}
 	li a:hover {
   color: white;
@@ -70,7 +70,7 @@
 <body>
 <div class="pic1">
 <img src="forest1.gif" alt="forest"/>
-<h1 id="head">About Life on Land</h1>
+<h1 id="head">Solutions</h1>
 </div>
 	<div id="division">
 		
@@ -93,10 +93,12 @@ GVI incorporates wildlife conservation into targeted volunteer programs. By gett
 		 </p>
 	<div id="list">
 		<ul style="list-style-type:none">
-                                <li><i class="fas fa-check"></i> <a href="3">Home</a></li><br>
+                                <li><i class="fas fa-check"></i> <a href="description.html">Home</a></li><br>
+								<li><i class="fas fa-check"></i> <a href="image.html">description</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="aboutus.html">About us</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="targets.html">Targets</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="targetsdef.html">Solutions</a></li><br>
+                                <li><i class="fas fa-check"></i> <a href="targetsdef.html">More about targets</a></li><br>
+								<li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li><br>
                             </ul>
 	</div>
 	</div>
