--- a/aboutus.html
+++ b/aboutus.html
@@ -83,10 +83,11 @@ html {
   font-family:time new roman;
   }
   #list{
-      font-size:18px;
-      background-color:#008B8B;
-      min-width:100%;
+    font-size:18px;
+    background-color:#008B8B;
+			min-width:100%;
 			display:block;
+			font-family:Calibri;
       display:flex;
 			min-height:30%;
   }
@@ -139,7 +140,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="ritheeshkumar.jpeg" alt="ritheeshkumar" style="width:100%; height:100%;">
+      <img src="ritheeshkumar.jpeg" alt="ritheeshkumar" style="width:100%;">
       <div class="container">
         <h2>Ritheeshkumar</h2>
         <p class="title">Team member</p>
@@ -148,11 +149,10 @@ html {
       </div>
     </div>
   </div>
-   
-    
+  
   <div class="column">
     <div class="card">
-      <img src="sansala.jpeg" alt="sansala" style="width:100%;height:60%;">
+      <img src="sansala.jpeg" alt="sansala" style="width:100%;">
       <div class="container">
         <h2>Sansala Senanayake</h2>
         <p class="title">Team member</p>
@@ -160,8 +160,6 @@ html {
         <p><button class="button">Contact</button></p>
       </div>
     </div>
-  </div>
- 
   </div>
   <div class="column">
     <div class="card">
@@ -187,13 +185,13 @@ html {
   </div> 
 </div>
 <div id="list">
-  <ul style="list-style-type:none">
-                              <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/Image.html" target="blank">Home</a></li><br>
-                              <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/Nilupul.html" target="blank">About us</a></li><br>
-                              <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html" target="blank">Targets</a></li><br>
-                              <li class="fas fa-check"><a href="#">Solution</a></li><br>
-                          </ul>
-</div>
-
+<ul style="list-style-type:none">
+  <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
+  <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
+  <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
+  <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="blank">More about targets</a></li><br>
+  <li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
+                        </ul>
+                      </div>
 </body>
 </html>
