--- a/targets.html
+++ b/targets.html
@@ -193,73 +193,73 @@ li a:hover {
       </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="1.png" alt="15-1" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="2.png" alt="15-2" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="3.png" alt="15-3" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="4.png" alt="15-4" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="5.png" alt="15-5" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="6.png" alt="15-6" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="7.png" alt="15-7" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="8.png" alt="15-8" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="9.png" alt="15-9" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="10.png" alt="15-a" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="11.png" alt="15-b" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="#"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
     <img src="12.png" alt="15-c" width="100%" height="100%">
   </a>
 </div>
@@ -363,8 +363,8 @@ font-size:18px">
     <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
     <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
     <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="blank">More about targets</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="">Solutions</a></li>
+    <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
                           </ul>
 </div>
 </div>
