--- a/desc.html
+++ b/desc.html
@@ -14,7 +14,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 .image-container {
-  background-image: url("channel.jpeg");
+  background-image: url("img/channel.jpeg");
   background-size: cover;
   position: relative;
   width: 100%;
