--- a/targetdef.html
+++ b/targetdef.html
@@ -4,6 +4,56 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
+    .para1{
+  color:white;
+  font-size:50px;
+  font-family:sans serif;
+  text-align:center;
+  text-decoration:bold;
+  background-color:midnightblue;
+  }
+  .img{
+	display:block;
+	margin:auto;
+	width:60%;
+  }
+  
+  * {
+  box-sizing: border-box;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 50%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  padding: 16px;
+  text-align: center;
+  background-color: #339933;
+}
 </style>
 </head>
 <body>
