--- a/targets.html
+++ b/targets.html
@@ -193,19 +193,19 @@ li a:hover {
       </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html">
     <img src="1.png" alt="15-1" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> 
     <img src="2.png" alt="15-2" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html">
     <img src="3.png" alt="15-3" width="100%" height="100%">
   </a>
 </div>
