--- a/targets.html
+++ b/targets.html
@@ -211,19 +211,19 @@ li a:hover {
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html">
     <img src="4.png" alt="15-4" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> 
     <img src="5.png" alt="15-5" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> 
     <img src="6.png" alt="15-6" width="100%" height="100%">
   </a>
 </div>
