--- a/targets.html
+++ b/targets.html
@@ -229,19 +229,19 @@ li a:hover {
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html">
     <img src="7.png" alt="15-7" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> 
     <img src="8.png" alt="15-8" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> 
     <img src="9.png" alt="15-9" width="100%" height="100%">
   </a>
 </div>
