--- a/targets.html
+++ b/targets.html
@@ -247,19 +247,19 @@ li a:hover {
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> 
     <img src="10.png" alt="15-a" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> 
     <img src="11.png" alt="15-b" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+  <a target="_blank" href="targetsdef.html"> 
     <img src="12.png" alt="15-c" width="100%" height="100%">
   </a>
 </div>
