--- a/targets.html
+++ b/targets.html
@@ -194,25 +194,25 @@ li a:hover {
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html">
-    <img src="1.png" alt="15-1" width="100%" height="100%">
+    <img src="img/1.png" alt="15-1" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html"> 
-    <img src="2.png" alt="15-2" width="100%" height="100%">
+    <img src="img/2.png" alt="15-2" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html">
-    <img src="3.png" alt="15-3" width="100%" height="100%">
+    <img src="img/3.png" alt="15-3" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html">
-    <img src="4.png" alt="15-4" width="100%" height="100%">
+    <img src="img/4.png" alt="15-4" width="100%" height="100%">
   </a>
 </div>
 
