--- a/targets.html
+++ b/targets.html
@@ -218,25 +218,25 @@ li a:hover {
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html"> 
-    <img src="5.png" alt="15-5" width="100%" height="100%">
+    <img src="img/5.png" alt="15-5" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html"> 
-    <img src="6.png" alt="15-6" width="100%" height="100%">
+    <img src="img/6.png" alt="15-6" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html">
-    <img src="7.png" alt="15-7" width="100%" height="100%">
+    <img src="img/7.png" alt="15-7" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html"> 
-    <img src="8.png" alt="15-8" width="100%" height="100%">
+    <img src="img/8.png" alt="15-8" width="100%" height="100%">
   </a>
 </div>
 
