--- a/targets.html
+++ b/targets.html
@@ -242,25 +242,25 @@ li a:hover {
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html"> 
-    <img src="9.png" alt="15-9" width="100%" height="100%">
+    <img src="img/9.png" alt="15-9" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html"> 
-    <img src="10.png" alt="15-a" width="100%" height="100%">
+    <img src="img/10.png" alt="15-a" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html"> 
-    <img src="11.png" alt="15-b" width="100%" height="100%">
+    <img src="img/11.png" alt="15-b" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="targetsdef.html"> 
-    <img src="12.png" alt="15-c" width="100%" height="100%">
+    <img src="img/12.png" alt="15-c" width="100%" height="100%">
   </a>
 </div>
  <hr class="hr1" />
