--- a/targets.html
+++ b/targets.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <meta charset="UTF-8"> <!--meka danne emoji ad krnna html wlta-->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--meka danne web compatibility -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--meka danne device compatibility-->
+  <meta charset="UTF-8"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <head>
   
 <style>
