--- a/targets.html
+++ b/targets.html
@@ -36,7 +36,7 @@ height:10px;
 div.gallery {
   padding: 10px;
   margin: 20px;
-  border: 3px solid lightseagreen; /* photo eka wateta border eka daganna RGB unath danna puluwan -(burlywood) colour ekk meka*/
+  border: 3px solid lightseagreen; 
   float: left; 
   width: 20%;
 }
