--- a/relatedgoals.html
+++ b/relatedgoals.html
@@ -79,7 +79,7 @@ img {
       <p>If we are to feed the 815 million people who are hungry today and the extra 2 billion people who are predicted to be undernourished by 2050, we will require a significant overhaul in the global food and agriculture system. Agriculture investments are critical for boosting agricultural productivity, and sustainable food production systems are required to help lessen the dangers of hunger.</p>
           </div>
           <div class="column-33">
-              <img src="paddy.jpg" alt="paddy" width="100%" height="100%">
+              <img src="img/paddy.jpg" alt="paddy" width="100%" height="100%">
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@ img {
       <div class="container" style="background-color:cyan">
         <div class="row">
           <div class="column-33">
-            <img src="drought.jpg" alt="App" width="100%" height="100%">
+            <img src="img/drought.jpg" alt="App" width="100%" height="100%">
           </div>
           <div class="column-66">
             <h1 class="large-font" style="color:midnightblue;"><b>Climate Action</b></h1>
@@ -106,7 +106,7 @@ img {
           <p>At this time, more than 2 billion people are at risk of losing access to freshwater resources, and by 2050, at least one out of every four people will be living in a country with chronic or recurring water shortages. Drought affects some of the world's poorest countries, causing hunger and malnutrition to worsen. Fortunately, significant progress has been made in the last decade in terms of drinking water and sanitation, with over 90% of the world's population now having access to better drinking water sources.Increased investment in local management of freshwater ecosystems and sanitation infrastructure is needed to enhance sanitation and access to drinking water in various developing nations in Sub-Saharan Africa, Central Asia, Southern Asia, Eastern Asia, and South-Eastern Asia.</p>
           </div>
           <div class="column-33">
-              <img src="water.jpg" width="100%" height="100%" >
+              <img src="img/water.jpg" width="100%" height="100%" >
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@ img {
       <div class="container" style="background-color:cyan">
         <div class="row">
           <div class="column-33">
-            <img src="drought.jpg" alt="drought" width="100%" height="100%">
+            <img src="img/drought.jpg" alt="drought" width="100%" height="100%">
           </div>
           <div class="column-66">
             <h1 class="large-font" style="color:midnightblue;"><b>Life Below Water</b></h1>
