--- a/targets.html
+++ b/targets.html
@@ -354,10 +354,10 @@ text-align:center;color: white;
 font-family:'Segoe UI';
 font-size:18px">
 <div style="margin-left:200px;margin-right:200px;"
-<p >Human life is as much reliant on the land as it is on the water for sustenance and survival. Plant life accounts for 80% of human nutrition, and agriculture is a major economic resource. Forests cover 30% of the Earth's land area. Provide vital habitat for millions of species, as well as important sources of clean air and water, and are critical in the fight against climate change.</p><br>
-<p>Every year, 13 million hectares of forest are lost, while ongoing dryland degradation has resulted in the desertification of 3.6 billion hectares, disproportionately harming impoverished communities.</p><br/>
-<p>Despite the fact that 15% of land is protected, biodiversity is nevertheless threatened. Almost 7,000 animal and plant species have been unlawfully exported. Wildlife trafficking not only destroys biodiversity, but it also causes insecurity, fuels conflict, and encourages corruption.</p><br/>
-<p>Urgent action is needed to stop the loss of natural habitats and biodiversity that are part of our shared legacy, as well as to promote global food and water security, climate change mitigation and adaptation, and peace and security.</p><br/>
+<p >Human life is as much reliant on the land as it is on the water for sustenance and survival. Plant life accounts for 80% of human nutrition, and agriculture is a major economic resource. Forests cover 30% of the Earth's land area. Provide vital habitat for millions of species, as well as important sources of clean air and water, and are critical in the fight against climate change.</p>
+<p>Every year, 13 million hectares of forest are lost, while ongoing dryland degradation has resulted in the desertification of 3.6 billion hectares, disproportionately harming impoverished communities.</p>
+<p>Despite the fact that 15% of land is protected, biodiversity is nevertheless threatened. Almost 7,000 animal and plant species have been unlawfully exported. Wildlife trafficking not only destroys biodiversity, but it also causes insecurity, fuels conflict, and encourages corruption.</p>
+<p>Urgent action is needed to stop the loss of natural habitats and biodiversity that are part of our shared legacy, as well as to promote global food and water security, climate change mitigation and adaptation, and peace and security.</p>
 
 
 </div>
