--- a/targetdef.html
+++ b/targetdef.html
@@ -120,7 +120,7 @@
         </div>
 
         <div class="img">
-          <img src="sd2.png" alt="sd2" style="margin-left:100px;margin-right:100px;">
+          <img src="img/sd2.png" alt="sd2" style="margin-left:100px;margin-right:100px;">
           </div>
           
           <div class="row">
