--- a/aboutus.html
+++ b/aboutus.html
@@ -106,7 +106,7 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="seyon.jpeg" alt="seyon" style="width:100%; height:100%;">
+      <img src="img/seyon.jpeg" alt="seyon" style="width:100%; height:100%;">
       <div class="container">
         <h2>Mahendran Seyon</h2>
         <p class="title">Team member</p>
