--- a/targets.html
+++ b/targets.html
@@ -278,7 +278,7 @@ li a:hover {
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
-                                    <img src="zero hunger.jpg" alt="zero hunger" />
+                                    <img src="img/zero hunger.jpg " alt="zero hunger" />
                                 </div>
                                 <div class="text-container">
 								    <br/>
@@ -294,7 +294,7 @@ li a:hover {
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
-                                    <img src="climate change.jpg" alt="climate change" />
+                                    <img src="img/climate change.jpg " alt="climate change" />
                                 </div>
                                 <div class="text-container">
                                     <br/>								
@@ -310,7 +310,7 @@ li a:hover {
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
-                                    <img src="clean water.jpg" alt="clean water" />
+                                    <img src="img/clean water.jpg " alt="clean water" />
                                 </div>
                                 <br/>
                                 <div class="text-container">
@@ -327,7 +327,7 @@ li a:hover {
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
-                                    <img src="below water.jpg" alt="below water" />
+                                    <img src="img/below water.jpg " alt="below water" />
                                 </div>
                                 <div class="text-container">
 								    <br/>
