--- a/targets.html
+++ b/targets.html
@@ -184,7 +184,7 @@ li a:hover {
 <body>
 <div class="container">
       <div class="image">
-        <img src="img/SDG-15.png" alt="sdg15" width="30%" height="25%">
+        <img src="img/SDG-15.png" alt="sdg15" width="30%" height="25%" style="align-items: center; padding-left:700px ;">
       </div>
       <div class="text">
 	    <div style="font-style:bold;background-color:darkcyan;text-align:center;color: white;">
