--- a/aboutus.html
+++ b/aboutus.html
@@ -118,7 +118,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="ritheeshkumar.jpeg" alt="ritheeshkumar" style="width:100%; height:100%;">
+      <img src="img/ritheeshkumar.jpeg" alt="ritheeshkumar" style="width:100%; height:100%;">
       <div class="container">
         <h2>Ritheeshkumar</h2>
         <p class="title">Team member</p>
@@ -130,7 +130,7 @@ html {
   
   <div class="column">
     <div class="card">
-      <img src="sansala.jpeg" alt="sansala" style="width:100%;height:60%;">
+      <img src="img/sansala.jpeg" alt="sansala" style="width:100%;height:60%;">
       <div class="container">
         <h2>Sansala Senanayake</h2>
         <p class="title">Team member</p>
@@ -141,7 +141,7 @@ html {
   </div>
   <div class="column">
     <div class="card">
-      <img src="yisira.jpeg" alt="yisira" style="width:100%;height:60%;">
+      <img src="img/yisira.jpeg" alt="yisira" style="width:100%;height:60%;">
       <div class="container">
         <h2>Yisira Sankalpani</h2>
         <p class="title">Team member</p>
@@ -152,7 +152,7 @@ html {
   </div>
  <div class="column">
     <div class="card">
-      <img src="nilupul.jpeg" alt="nilupul" style="width:100%;height:50%;">
+      <img src="img/nilupul.jpeg" alt="nilupul" style="width:100%;height:50%;">
       <div class="container">
         <h2>Nilupul Dasun</h2>
         <p class="title">Team member</p>
@@ -162,6 +162,14 @@ html {
     </div>
   </div> 
 </div>
-
+<div id="list">
+  <ul style="list-style-type:none">
+    <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
+                          </ul>
+</div>
 </body>
 </html>
