--- a/desc.html
+++ b/desc.html
@@ -264,8 +264,8 @@ img {vertical-align: middle;}
               <li><i class="fas fa-check"></i> <a href="#">Home</a></li>
               <li><i class="fas fa-check"></i> <a href="#">About us</a></li>
               <li><i class="fas fa-check"></i> <a href="#">Targets</a></li>
-              <li><i class="fas fa-check"></i> <a href="#">Terms of service</a></li>
-              <li><i class="fas fa-check"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="fas fa-check"></i> <a href="#">More about targets</a></li>
+              <li><i class="fas fa-check"></i> <a href="#">Solutions</a></li>
           </ul>
       </div>
 
