--- a/relatedgoals.html
+++ b/relatedgoals.html
@@ -106,7 +106,7 @@ img {
           <p>At this time, more than 2 billion people are at risk of losing access to freshwater resources, and by 2050, at least one out of every four people will be living in a country with chronic or recurring water shortages. Drought affects some of the world's poorest countries, causing hunger and malnutrition to worsen. Fortunately, significant progress has been made in the last decade in terms of drinking water and sanitation, with over 90% of the world's population now having access to better drinking water sources.Increased investment in local management of freshwater ecosystems and sanitation infrastructure is needed to enhance sanitation and access to drinking water in various developing nations in Sub-Saharan Africa, Central Asia, Southern Asia, Eastern Asia, and South-Eastern Asia.</p>
           </div>
           <div class="column-33">
-            <img src=<img src="img/water.jpg" alt="" srcset="">
+            <img src="img/water.jpg" alt="" srcset="">
           </div>
         </div>
       </div>
