--- a/relatedgoals.html
+++ b/relatedgoals.html
@@ -126,5 +126,16 @@ img {
           </div>
         </div>
       </div>
+
+      <div id="list">
+        <ul style="list-style-type:none">
+                                    <li><i class="fas fa-check"></i> <a href="description.html">Home</a></li><br>
+                    <li><i class="fas fa-check"></i> <a href="image.html">description</a></li><br>
+                                    <li><i class="fas fa-check"></i> <a href="aboutus.html">About us</a></li><br>
+                                    <li><i class="fas fa-check"></i> <a href="targets.html">Targets</a></li><br>
+                                    <li><i class="fas fa-check"></i> <a href="targetsdef.html">More about targets</a></li><br>
+                    <li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li><br>
+                                </ul>
+      </div>
 </body>
 </html>
