--- a/desc.html
+++ b/desc.html
@@ -262,10 +262,12 @@ img {vertical-align: middle;}
         <h4>More</h4>
           <ul>
               <li><i class="fas fa-check"></i> <a href="#">Home</a></li>
+              <li><i class="fas fa-check"></i> <a href="#">Solutions</a></li>
               <li><i class="fas fa-check"></i> <a href="#">About us</a></li>
               <li><i class="fas fa-check"></i> <a href="#">Targets</a></li>
               <li><i class="fas fa-check"></i> <a href="#">More about targets</a></li>
               <li><i class="fas fa-check"></i> <a href="#">Solutions</a></li>
+              <li><i class="fas fa-check"></i> <a href="#">Description</a></li>
           </ul>
       </div>
 
