--- a/Image.html
+++ b/Image.html
@@ -1,5 +1,5 @@
 <html>
-<head>Description
+<head>
 <style>
 	div.image{
 			cursor:pointer;
@@ -18,7 +18,7 @@
 					background-size:cover;
 				}
 	div.image img:hover{
-						opacity:0.7
+						opacity:0.5
 						cursor:pointer;
 						}
 						
@@ -139,7 +139,7 @@
 			<li><i class="fas fa-check"></i> <a href="Image.html">Description</a></li><br>
 			<li><i class="fas fa-check"></i> <a href="targets.html" target="parent">Targets</a></li><br>
 			<li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
-			<li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
+			<li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
                             </ul>
 	</div>
 </body>
