--- a/Image.html
+++ b/Image.html
@@ -90,20 +90,19 @@
 			}
 	body{
 			background-color:forestgreen;
-			overflow:scroll;
+			overflow-y: scroll;
 		}
 		#list{
 			font-size:18px;
-			margin-top:27%;
-			liststyletype:none;
+			margin-top:2%;
+			list-style-type:none;
 			background-color:#008B8B;
 			min-width:100%;
-			display:block;
 			font-family:Calibri;
-			margin-left:-10%;
+			margin-left:2%;
 			position:static;
-			display:flex;
 			min-height:30%;
+			float:left;
 			}
 	li a:hover {
   background-color: #555;
