--- a/Image.html
+++ b/Image.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head><title>Description</title>
 <style>
 	div.image{
 			cursor:pointer;
@@ -135,6 +135,7 @@
 		<ul style="list-style-type:none">
 			<li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
 			<li><i class="fas fa-check"></i> <a href="Image.html">Description</a></li><br>
+			<li><i class="fas fa-check"></i> <a href="aboutus.html" target="blank">About us</a></i></li><br>
 			<li><i class="fas fa-check"></i> <a href="targets.html" target="parent">Targets</a></li><br>
 			<li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
 			<li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
