--- a/targets.html
+++ b/targets.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
-  <meta charset="UTF-8"> 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<html><title>Targets</title>
+  <meta charset="UTF-8"> <!--meka danne emoji ad krnna html wlta-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--meka danne web compatibility -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--meka danne device compatibility-->
 <head>
   
 <style>
@@ -36,7 +36,7 @@ height:10px;
 div.gallery {
   padding: 10px;
   margin: 20px;
-  border: 3px solid lightseagreen; 
+  border: 3px solid lightseagreen; /* photo eka wateta border eka daganna RGB unath danna puluwan -(burlywood) colour ekk meka*/
   float: left; 
   width: 20%;
 }
@@ -184,7 +184,7 @@ li a:hover {
 <body>
 <div class="container">
       <div class="image">
-        <img src="img/SDG-15.png" alt="sdg15" width="30%" height="25%" style="align-items: center; padding-left:700px ;">
+        <img src="SDG-15.png" alt="sdg15" width="30%" height="25%">
       </div>
       <div class="text">
 	    <div style="font-style:bold;background-color:darkcyan;text-align:center;color: white;">
@@ -193,74 +193,74 @@ li a:hover {
       </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html">
-    <img src="img/1.png" alt="15-1" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="1.png" alt="15-1" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> 
-    <img src="img/2.png" alt="15-2" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="2.png" alt="15-2" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html">
-    <img src="img/3.png" alt="15-3" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="3.png" alt="15-3" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html">
-    <img src="img/4.png" alt="15-4" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="4.png" alt="15-4" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> 
-    <img src="img/5.png" alt="15-5" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="5.png" alt="15-5" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> 
-    <img src="img/6.png" alt="15-6" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="6.png" alt="15-6" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html">
-    <img src="img/7.png" alt="15-7" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="7.png" alt="15-7" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> 
-    <img src="img/8.png" alt="15-8" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="8.png" alt="15-8" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> 
-    <img src="img/9.png" alt="15-9" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="9.png" alt="15-9" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> 
-    <img src="img/10.png" alt="15-a" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="10.png" alt="15-a" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> 
-    <img src="img/11.png" alt="15-b" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="11.png" alt="15-b" width="100%" height="100%">
   </a>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="targetsdef.html"> 
-    <img src="img/12.png" alt="15-c" width="100%" height="100%">
+  <a target="_blank" href="targetsdef.html"> <!--"#" methenta redirect wenna one link eka denna -->
+    <img src="12.png" alt="15-c" width="100%" height="100%">
   </a>
 </div>
  <hr class="hr1" />
@@ -278,7 +278,7 @@ li a:hover {
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
-                                    <img src="img/zero hunger.jpg " alt="zero hunger" />
+                                    <img src="zero hunger.jpg" alt="zero hunger" />
                                 </div>
                                 <div class="text-container">
 								    <br/>
@@ -294,7 +294,7 @@ li a:hover {
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
-                                    <img src="img/climate change.jpg " alt="climate change" />
+                                    <img src="climate change.jpg" alt="climate change" />
                                 </div>
                                 <div class="text-container">
                                     <br/>								
@@ -310,7 +310,7 @@ li a:hover {
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
-                                    <img src="img/clean water.jpg " alt="clean water" />
+                                    <img src="clean water.jpg" alt="clean water" />
                                 </div>
                                 <br/>
                                 <div class="text-container">
@@ -327,7 +327,7 @@ li a:hover {
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="image-box">
-                                    <img src="img/below water.jpg " alt="below water" />
+                                    <img src="below water.jpg" alt="below water" />
                                 </div>
                                 <div class="text-container">
 								    <br/>
@@ -354,21 +354,21 @@ text-align:center;color: white;
 font-family:'Segoe UI';
 font-size:18px">
 <div style="margin-left:200px;margin-right:200px;"
-<p >Human life is as much reliant on the land as it is on the water for sustenance and survival. Plant life accounts for 80% of human nutrition, and agriculture is a major economic resource. Forests cover 30% of the Earth's land area. Provide vital habitat for millions of species, as well as important sources of clean air and water, and are critical in the fight against climate change.</p>
-<p>Every year, 13 million hectares of forest are lost, while ongoing dryland degradation has resulted in the desertification of 3.6 billion hectares, disproportionately harming impoverished communities.</p>
-<p>Despite the fact that 15% of land is protected, biodiversity is nevertheless threatened. Almost 7,000 animal and plant species have been unlawfully exported. Wildlife trafficking not only destroys biodiversity, but it also causes insecurity, fuels conflict, and encourages corruption.</p>
-<p>Urgent action is needed to stop the loss of natural habitats and biodiversity that are part of our shared legacy, as well as to promote global food and water security, climate change mitigation and adaptation, and peace and security.</p>
-</div>
-</div>
-
+<p >Human life is as much reliant on the land as it is on the water for sustenance and survival. Plant life accounts for 80% of human nutrition, and agriculture is a major economic resource. Forests cover 30% of the Earth's land area. Provide vital habitat for millions of species, as well as important sources of clean air and water, and are critical in the fight against climate change.</p><br>
+<p>Every year, 13 million hectares of forest are lost, while ongoing dryland degradation has resulted in the desertification of 3.6 billion hectares, disproportionately harming impoverished communities.</p><br/>
+<p>Despite the fact that 15% of land is protected, biodiversity is nevertheless threatened. Almost 7,000 animal and plant species have been unlawfully exported. Wildlife trafficking not only destroys biodiversity, but it also causes insecurity, fuels conflict, and encourages corruption.</p><br/>
+<p>Urgent action is needed to stop the loss of natural habitats and biodiversity that are part of our shared legacy, as well as to promote global food and water security, climate change mitigation and adaptation, and peace and security.</p><br/>
 <div id="list">
   <ul style="list-style-type:none">
     <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
     <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
+    <li><i class="fas fa-check"></i> <a href="aboutus.html">About us</a></i></li><br>
     <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
     <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
+    <li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
                           </ul>
+</div>
+</div>
 </div>
 </body>
 </html>
