--- a/aboutus.html
+++ b/aboutus.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><title>About Us</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -82,6 +82,28 @@ html {
   font-size:40px;
   font-family:time new roman;
   }
+  #list{
+    font-size:18px;
+    background-color:#008B8B;
+			min-width:100%;
+			display:block;
+			font-family:Calibri;
+      display:flex;
+			min-height:30%;
+  }
+  li a:hover {
+  background-color: #555;
+  color: white;
+  }
+  li a{
+		text-decoration:none;
+		color:white;
+		overflow:auto;
+	}
+	ul li:before {
+  content: '\2714\0020';
+  color:white;
+}
 </style>
 </head>
 <body>
@@ -106,7 +128,7 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="img/seyon.jpeg" alt="seyon" style="width:100%; height:100%;">
+      <img src="seyon.jpeg" alt="seyon" style="width:100%; height:100%;">
       <div class="container">
         <h2>Mahendran Seyon</h2>
         <p class="title">Team member</p>
@@ -118,7 +140,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="img/ritheeshkumar.jpeg" alt="ritheeshkumar" style="width:100%; height:100%;">
+      <img src="ritheeshkumar.jpeg" alt="ritheeshkumar" style="width:100%;">
       <div class="container">
         <h2>Ritheeshkumar</h2>
         <p class="title">Team member</p>
@@ -130,7 +152,7 @@ html {
   
   <div class="column">
     <div class="card">
-      <img src="img/sansala.jpeg" alt="sansala" style="width:100%;height:60%;">
+      <img src="sansala.jpeg" alt="sansala" style="width:100%;">
       <div class="container">
         <h2>Sansala Senanayake</h2>
         <p class="title">Team member</p>
@@ -141,7 +163,7 @@ html {
   </div>
   <div class="column">
     <div class="card">
-      <img src="img/yisira.jpeg" alt="yisira" style="width:100%;height:60%;">
+      <img src="yisira.jpeg" alt="yisira" style="width:100%;">
       <div class="container">
         <h2>Yisira Sankalpani</h2>
         <p class="title">Team member</p>
@@ -152,7 +174,7 @@ html {
   </div>
  <div class="column">
     <div class="card">
-      <img src="img/nilupul.jpeg" alt="nilupul" style="width:100%;height:50%;">
+      <img src="nilupul.jpeg" alt="nilupul" style="width:100%;">
       <div class="container">
         <h2>Nilupul Dasun</h2>
         <p class="title">Team member</p>
@@ -163,13 +185,13 @@ html {
   </div> 
 </div>
 <div id="list">
-  <ul style="list-style-type:none">
-    <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li><br>
-    <li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li>
-                          </ul>
-</div>
+<ul style="list-style-type:none">
+  <li><i class="fas fa-check"></i> <a href="description.html" target="blank">Home</a></li><br>
+  <li><i class="fas fa-check"></i> <a href="Image.html" target="blank">Description</a></li><br>
+  <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li><br>
+  <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="blank">More about targets</a></li><br>
+  <li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
+                        </ul>
+                      </div>
 </body>
 </html>
