--- a/solution.html
+++ b/solution.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head><title>Challenges and Solutions</title>
 <style>
 	#head{
 			font-size:98px;
@@ -98,7 +98,7 @@
                                 <li><i class="fas fa-check"></i> <a href="aboutus.html">About us</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="targets.html">Targets</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="targetsdef.html">More about targets</a></li><br>
-								<li><i class="fas fa-check"></i> <a href="about.html">Solutions</a></li><br>
+								<li><i class="fas fa-check"></i> <a href="about.html">Challenges & Solutions</a></li><br>
                             </ul>
 	</div>
 	</div>
