--- a/description.html
+++ b/description.html
@@ -276,8 +276,8 @@ function showSlides() {
                                 <li><i class="fas fa-check"></i> <a href="Image.html" target="parent">Description</a></li>
                                 <li><i class="fas fa-check"></i> <a href="targets.html" target="blank">Targets</a></li>
                                 <li><i class="fas fa-check"></i> <a href="targetsdef.html" target="parent">More about targets</a></li>
-                                <li><i class="fas fa-check"></i> <a href="solution.html">Solutions</a></li>
-                                <li><i class="fas fa-check"></i> <a href="aboutus.html">About us</a></li>
+                                <li><i class="fas fa-check"></i> <a href="solution.html" target="blank">Challenges & Solutions</a></li>
+                                <li><i class="fas fa-check"></i> <a href="aboutus.html" target="blank">About us</a></li>
                               </ul>
                         </div>
 
